# the-dot-operators

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO  dev-requirements.txt  main.py  pyproject.toml  requirements.txt  tox.ini
jigsaw/: .credentials.json  __main__.py  fcolor.py  modifier.py  secret_codes.py  tessellation.py  tiles.py  utils.py  utils.py.orig
jigsaw-game/: __main__.py  client.py  common.py  test_secret_codes.py  test_tessellation.py
jigsaw-game/client/: __init__.py  buttons.py  constants.py  credits_view.py  custom_game.py  jigsaw.py  menu.py  settings_view.py  tiles.py
jigsaw-game/common/: __init__.py  secret_codes.py  tessellation.py
jigsaw/client/: __init__.py  constants.py  credits_view.py  game.py  gui.py  jigsaw.py  menu.py  puzzle.py  settings_view.py  tiles.py
tests/: test_modifier_fcolor.py  test_secret_codes.py  test_tessellation.py  test_utils.py
