[tool.poetry]
name = "the-dot-operators"
version = "0.1.0"
description = ""
authors = ["Author 1 <email@mail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.dev-dependencies]
# Base tools
flake8 = "~6.1.0"
isort = "~5.12.0"
pre-commit = "~3.4.0"

# Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
flake8-docstrings = "~1.7.0"
black = "~23.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
